--- a/style/style.css
+++ b/style/style.css
@@ -3,3 +3,10 @@
     font-family: "NerkoOne";
     src: url(../assets/fonts/NerkoOne-Regular.ttf);
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style-type: none;
+}
