--- a/style/style.css
+++ b/style/style.css
@@ -10,3 +10,38 @@
     box-sizing: border-box;
     list-style-type: none;
 }
+
+body {
+    font-family: 'Courier New', Courier, monospace;
+    /* background: #141313; */
+    color: rgb(235, 234, 234);
+}
+
+.container {
+    margin: 0 auto;
+    max-width: 1200px;
+}
+
+/* header */
+.header {
+    color: black;
+    text-align: center;
+    font-size: 20px;
+    font-family: "NerkoOne";
+    padding: 10px 0;
+}
+
+h1 {
+    background-color: yellow;
+}
+
+.hero-img {
+    /* background: #141313; */
+    display: flex;
+    justify-content: center;
+    padding: 20px 0 10px;
+}
+
+.hero-img img {
+    max-width: 100%;
+}
